workspace/output.log
d:\frontend-design\workspace\kpop-presentation.js:44
    { title: '2000s - Hallyu Wave', desc: 'TVXQ, Girls' Generation, Super Junior lead to Korean Wave across Asia.', color: '9B4DCA' },
                                                        ^^^^^^^^^^

SyntaxError: Unexpected identifier 'Generation'
    at wrapSafe (node:internal/modules/cjs/loader:1638:18)
    at Module._compile (node:internal/modules/cjs/loader:1680:20)
    at Object..js (node:internal/modules/cjs/loader:1839:10)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Function._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:171:5)
    at node:internal/main/run_main_module:36:49

Node.js v22.19.0
